--- a/ORMAT assignment - Vincent Salinas.ipynb
+++ b/ORMAT assignment - Vincent Salinas.ipynb
@@ -6,7 +6,16 @@
    "source": [
     "# Ormat Technologies Inc.\n",
     "\n",
-    "#### Vincent Salinas, UCSD, Computer Science\n"
+    "Vincent Salinas <br>\n",
+    "Computer Science <br>\n",
+    "UCSD <br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Modules"
    ]
   },
   {
@@ -32,7 +41,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Import data\n"
+    "### Import data\n"
    ]
   },
   {
@@ -479,8 +488,8 @@
     }
    ],
    "source": [
-    "# To analyze the dataset, we must replace any \"n/a\" elements with 0. Our data cannot be analyzed correctly \n",
-    "# with missing elements. Replacing any missing data with 0 insures no erroneous data is included, while maintaining\n",
+    "# To analyze the dataset, exclude any \"n/a\" elements. Our data cannot be analyzed correctly \n",
+    "# with missing data. Excluding them insures no erroneous data is included, while maintaining\n",
     "# all significant data.\n",
     "df = df.dropna()\n",
     "df.isnull().values.any()"
