--- a/ORMAT assignment - Vincent Salinas.ipynb
+++ b/ORMAT assignment - Vincent Salinas.ipynb
@@ -714,7 +714,7 @@
     "Want to predict when next critical level (temperature spike) will happen.\n",
     "\n",
     "### Methodology:\n",
-    "Designate stable and unstable states. These are temperature thresholds that are pre-designated to be the maximum level of heat considered to be acceptable or safe. Designate unstable period. This is the length of time (days) that is pre-designated to be the maximum length of time considered to be acceptable or safe.\n",
+    "Designate stable and unstable states. These are temperature thresholds that are pre-designated to be the maximum or minimum level of heat considered to be acceptable or safe. Designate unstable period. This is the length of time (hours/minutes) that is pre-designated to be the maximum length of time considered to be acceptable or safe.\n",
     "\n",
     "Determine how long average temperature remains in unstable state. If average temperature remains in unstable state for unstable period or longer, critical level may occur.\n",
     "\n"
@@ -728,7 +728,7 @@
     "time = length of time, starting when temperature reaches unstable threshold <br>\n",
     "temp = average temperature <br>\n",
     "cx_min = 0 <br>\n",
-    "cx_max = maximum length of the time considered to be acceptable or safe <br>\n",
+    "cx_max = maximum length of the time considered to be acceptable or safe while in unstable state <br>\n",
     "cy_min = lower bound for unstable state <br>\n",
     "cy_max = upper bound for unstable state <br>\n",
     "\n",
