--- a/ORMAT assignment - Vincent Salinas.ipynb
+++ b/ORMAT assignment - Vincent Salinas.ipynb
@@ -732,7 +732,7 @@
     "cy_min = lower bound for unstable state <br>\n",
     "cy_max = upper bound for unstable state <br>\n",
     "\n",
-    "#### if ((temp < cy_min) OR (temp > cy_max)) AND (time > cx_max) --> critical level likely <br>"
+    "#### if ((temp < cy_min) OR (temp > cy_max)) AND (time > cx_max) --> temperature spikes likely <br>"
    ]
   },
   {
@@ -742,7 +742,7 @@
     "### Conclusion\n",
     "From the given data plot above, a temperature spike at (32.867252) occurs on 1/24/18 14:29. To make a prediction of when this would have likely occured, we may look at the average temperature and length of time before the spike. The plot above shows temperatures in the unstable state from indexes ~1100 to ~1120, dates and times 1/23/18 21:59 to 1/24/18 7:59, respectively. This is a length of time of ~10 hours. The mean temperature in this time was 5.2294484. Given a pre-desiganted thresholds for unstable state and unstable period, if 5.2294484 > (unstable state) AND ~10 > (unstable period), we can predict that a critical level (temperature spike) is likely to happen. \n",
     "\n",
-    "Given the dataset with designated dates and temperatures alone, I feel this is the best approach to solving the problem of forecasting temperature spikes and their likelihood. As far as the relationship between days and temperatures though, the two are completely independent. No indication can be made on the temperatures alone, given the time and day. A better prediction as \"why\" these temperature spikes occur will certainly require more data, such as materials used in the machinery maintaining heat levels, or routine and preventative maintenance, etc.\n",
+    "Given the dataset with designated dates and temperatures alone, I feel this is the best approach to solving the problem of forecasting temperature spikes and their likelihood. As far as the relationship between days and temperatures though, the two are completely independent. No indication can be made on the temperatures alone, given the time and day. A better prediction as to \"why\" these temperature spikes occur will certainly require more data, such as materials used in the machinery maintaining heat levels, or routine and preventative maintenance, etc.\n",
     "\n",
     "### Limitations: \n",
     "From the given dataset, there is only one instance of temperatures in the unstable state before reaching critical levels. To more accurately predict temperature spikes, we can better solidify the methodology above using larger datasets where we can analyze a larger number of these instances. Doing so can allow us to set a much more accurate threshold for unstable temperatures and periods before temperatures reach critical levels."
