--- a/ORMAT assignment - Vincent Salinas.ipynb
+++ b/ORMAT assignment - Vincent Salinas.ipynb
@@ -650,7 +650,8 @@
     "# Shows the current \"Start Date\" and \"End Date\" as well as their respective times (h:m)    \n",
     "def show_entry_fields():\n",
     "    print(\"Start Date: %s\\nStart Time: %s\\nEnd Date: %s\\nEnd Time: %s\" % (e1.get(), e2.get(), e3.get(), e4.get()))\n",
-    "    \n",
+    "\n",
+    "# Shows date of specified heat\n",
     "def show_date_of_specified_heat():\n",
     "    ind1, ind2 = get_indeces()\n",
     "    maximum = max(list2[ind1:ind2])\n",
