--- a/Working Copy.ipynb
+++ b/Working Copy.ipynb
@@ -20,13 +20,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Imports\n",
     "from tkinter import *\n",
     "import matplotlib.pyplot as plt\n",
+    "\n",
+    "from scipy import stats\n",
+    "from math import sqrt\n",
     "\n",
     "# Standard libraries used with Python\n",
     "import numpy as np\n",
@@ -41,7 +44,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Import data\n"
+    "### Import dataset\n"
    ]
   },
   {
@@ -604,7 +607,180 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean: 5.869145\n",
+      "Confidence Interval 95%: 5.862328, 5.875963\n",
+      "5.912457 - abnormal\n",
+      "6.142726 - abnormal\n",
+      "6.360831 - abnormal\n",
+      "6.558612 - abnormal\n",
+      "6.746326 - abnormal\n",
+      "6.479549 - abnormal\n",
+      "6.212771 - abnormal\n",
+      "5.901661 - abnormal\n",
+      "5.914458 - abnormal\n",
+      "6.119701 - abnormal\n",
+      "6.113822 - abnormal\n",
+      "6.107943 - abnormal\n",
+      "6.104566 - abnormal\n",
+      "6.104998 - abnormal\n",
+      "6.105429 - abnormal\n",
+      "6.139361 - abnormal\n",
+      "6.189681 - abnormal\n",
+      "6.240002 - abnormal\n",
+      "6.266471 - abnormal\n",
+      "6.291588 - abnormal\n",
+      "6.288613 - abnormal\n",
+      "6.186754 - abnormal\n",
+      "6.084896 - abnormal\n",
+      "6.044858 - abnormal\n",
+      "6.067607 - abnormal\n",
+      "6.090357 - abnormal\n",
+      "6.163277 - abnormal\n",
+      "6.251097 - abnormal\n",
+      "6.340318 - abnormal\n",
+      "6.458644 - abnormal\n",
+      "6.576970 - abnormal\n",
+      "6.643208 - abnormal\n",
+      "6.599141 - abnormal\n",
+      "6.555074 - abnormal\n",
+      "6.467580 - abnormal\n",
+      "6.350604 - abnormal\n",
+      "6.233628 - abnormal\n",
+      "6.231173 - abnormal\n",
+      "6.245711 - abnormal\n",
+      "6.289422 - abnormal\n",
+      "6.503856 - abnormal\n",
+      "6.718290 - abnormal\n",
+      "6.897542 - abnormal\n",
+      "7.028374 - abnormal\n",
+      "7.159206 - abnormal\n",
+      "6.951656 - abnormal\n",
+      "6.596098 - abnormal\n",
+      "6.240540 - abnormal\n",
+      "6.166514 - abnormal\n",
+      "6.101021 - abnormal\n",
+      "5.947684 - abnormal\n",
+      "5.972912 - abnormal\n",
+      "6.166810 - abnormal\n",
+      "6.366296 - abnormal\n",
+      "6.492800 - abnormal\n",
+      "5.918404 - abnormal\n",
+      "6.461470 - abnormal\n",
+      "6.612985 - abnormal\n",
+      "6.360237 - abnormal\n",
+      "6.107489 - abnormal\n",
+      "5.964142 - abnormal\n",
+      "6.053150 - abnormal\n",
+      "6.140794 - abnormal\n",
+      "6.184186 - abnormal\n",
+      "26.162443 - abnormal\n",
+      "24.409178 - abnormal\n",
+      "22.655914 - abnormal\n",
+      "24.022120 - abnormal\n",
+      "28.019252 - abnormal\n",
+      "32.016384 - abnormal\n",
+      "32.867252 - abnormal\n",
+      "32.640231 - abnormal\n",
+      "32.394776 - abnormal\n",
+      "29.415716 - abnormal\n",
+      "26.436655 - abnormal\n",
+      "24.316830 - abnormal\n",
+      "24.251806 - abnormal\n",
+      "24.186782 - abnormal\n",
+      "23.073451 - abnormal\n",
+      "21.169346 - abnormal\n",
+      "19.265242 - abnormal\n",
+      "19.144180 - abnormal\n",
+      "19.350450 - abnormal\n",
+      "19.426888 - abnormal\n",
+      "18.549170 - abnormal\n",
+      "17.671453 - abnormal\n",
+      "17.459402 - abnormal\n",
+      "18.268411 - abnormal\n",
+      "19.077420 - abnormal\n",
+      "19.074764 - abnormal\n",
+      "18.671480 - abnormal\n",
+      "18.268196 - abnormal\n",
+      "17.735277 - abnormal\n",
+      "17.194726 - abnormal\n",
+      "16.198085 - abnormal\n",
+      "13.577622 - abnormal\n",
+      "10.957159 - abnormal\n",
+      "9.788595 - abnormal\n",
+      "10.106237 - abnormal\n",
+      "10.423878 - abnormal\n",
+      "9.490890 - abnormal\n",
+      "8.182309 - abnormal\n",
+      "6.879548 - abnormal\n",
+      "6.307983 - abnormal\n",
+      "6.650268 - abnormal\n",
+      "6.466191 - abnormal\n",
+      "6.282115 - abnormal\n",
+      "6.613242 - abnormal\n",
+      "7.021962 - abnormal\n",
+      "7.177878 - abnormal\n",
+      "6.677369 - abnormal\n",
+      "6.533940 - abnormal\n",
+      "6.390511 - abnormal\n",
+      "6.702785 - abnormal\n",
+      "7.194081 - abnormal\n",
+      "7.685376 - abnormal\n",
+      "6.623703 - abnormal\n",
+      "6.595655 - abnormal\n",
+      "7.610884 - abnormal\n",
+      "6.650356 - abnormal\n",
+      "7.906348 - abnormal\n",
+      "8.219896 - abnormal\n",
+      "8.055796 - abnormal\n",
+      "7.891695 - abnormal\n",
+      "6.345045 - abnormal\n",
+      "5.882078 - abnormal\n",
+      "7.094734 - abnormal\n",
+      "6.933604 - abnormal\n",
+      "6.401491 - abnormal\n"
+     ]
+    }
+   ],
+   "source": [
+    "def bounded(x):\n",
+    "    if (x >= 5.0 and x <= 7.5):\n",
+    "        return(x)\n",
+    "    \n",
+    "def get_ci():\n",
+    "    mean = dff.mean()\n",
+    "    # evaluate sample variance by setting delta degrees of freedom (ddof) to\n",
+    "    # 1. The degree used in calculations is N - ddof\n",
+    "    stddev = stats.sem(dff, ddof=1)\n",
+    "    # Get the endpoints of the range that contains 95% of the distribution\n",
+    "    t_bounds = stats.t.interval(0.95, len(dff) - 1)\n",
+    "    # sum mean to the confidence interval\n",
+    "    ci = [mean + critval * stddev / sqrt(len(dff)) for critval in t_bounds]\n",
+    "    print(\"Mean: %f\" % mean)\n",
+    "    print(\"Confidence Interval 95%%: %f, %f\" % (ci[0], ci[1]))\n",
+    "    return(ci[0], ci[1])\n",
+    "\n",
+    "\n",
+    "dff = pd.DataFrame()\n",
+    "dff = df['temp'].apply(bounded)\n",
+    "dff = dff.dropna()\n",
+    "avg = dff.mean()\n",
+    "#get_ci()\n",
+    "lower, upper = get_ci()\n",
+    "for x in list2:\n",
+    "    if x > upper:\n",
+    "        print(\"%f - abnormal\" % x)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -649,15 +825,25 @@
     "    maximum = max(list2[ind1:ind2])\n",
     "    index = list2.index(maximum)\n",
     "    print(\"Date: %s\" % list1[int(index)])\n",
+    "\n",
+    "def show():\n",
+    "    print(list1[w1.get()])\n",
+    "    print(list2[w1.get()])\n",
     "    \n",
+    "\n",
     "    \n",
     "master = Tk()\n",
+    "root = Tk()\n",
     "Label(master, text=\"Start Date\").grid(row=0, column=0)\n",
     "Label(master, text=\"Time\").grid(row=0, column=2)\n",
     "Label(master, text=\"End Date\").grid(row=1, column=0)\n",
     "Label(master, text=\"Time\").grid(row=1, column=2)\n",
     "Label(master, text=\"Index\").grid(row=2, column=0)\n",
     "Label(master, text=\"Heat\").grid(row=2, column=2)\n",
+    "\n",
+    "w1 = Scale(root, from_=0, to=len(df['time'])-1, length=500, tickinterval=200, orient=HORIZONTAL)\n",
+    "w1.set(0)\n",
+    "w1.grid(row=0, column=0)\n",
     "\n",
     "e1 = Entry(master) # start date entry\n",
     "e2 = Entry(master) # start time entry\n",
@@ -688,6 +874,9 @@
     "Button(master, text='Date/Time', command=show_date).grid(row=6, column=1, sticky=W, pady=4)\n",
     "Button(master, text='Max', command=show_max_temp).grid(row=6, column=2, sticky=W, pady=4)\n",
     "Button(master, text='RTD', command=show_date_of_specified_heat).grid(row=6, column=3, sticky=W, pady=4)\n",
+    "\n",
+    "Button(root, text='Show', command=show).grid(row=0, column=1, sticky=W, pady=4)\n",
+    "\n",
     "\n",
     "mainloop( )"
    ]
