--- a/Ormat Assignment.ipynb
+++ b/Ormat Assignment.ipynb
@@ -920,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [
     {
@@ -2154,7 +2154,13 @@
       "Decrease detected: -0.035349000000000075 - Date/Time: 1/26/18 14:59 to 1/26/18 15:29\n",
       "Decrease detected: -0.142236000000000029 - Date/Time: 1/26/18 15:29 to 1/26/18 15:59\n",
       "Decrease detected: -0.142236999999999947 - Date/Time: 1/26/18 15:59 to 1/26/18 16:29\n",
-      "Increase detected: 0.044421999999999962 - Date/Time: 1/26/18 16:29 to 1/26/18 16:59\n",
+      "Increase detected: 0.044421999999999962 - Date/Time: 1/26/18 16:29 to 1/26/18 16:59\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Increase detected: 0.061200000000000032 - Date/Time: 1/26/18 16:59 to 1/26/18 17:29\n",
       "Increase detected: 0.062968000000000024 - Date/Time: 1/26/18 17:29 to 1/26/18 17:59\n",
       "Increase detected: 0.070389999999999953 - Date/Time: 1/26/18 17:59 to 1/26/18 18:29\n",
@@ -2258,13 +2264,7 @@
       "Decrease detected: -0.308353999999999795 - Date/Time: 1/28/18 18:59 to 1/28/18 19:29\n",
       "Decrease detected: -0.308354000000000239 - Date/Time: 1/28/18 19:29 to 1/28/18 19:59\n",
       "Decrease detected: -0.421488999999999780 - Date/Time: 1/28/18 19:59 to 1/28/18 20:29\n",
-      "Decrease detected: -0.618686000000000069 - Date/Time: 1/28/18 20:29 to 1/28/18 20:59\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Decrease detected: -0.618686000000000069 - Date/Time: 1/28/18 20:29 to 1/28/18 20:59\n",
       "Decrease detected: -0.618685000000000040 - Date/Time: 1/28/18 20:59 to 1/28/18 21:29\n",
       "Increase detected: 0.061650000000000003 - Date/Time: 1/28/18 21:29 to 1/28/18 21:59\n",
       "Increase detected: 0.445276000000000005 - Date/Time: 1/28/18 21:59 to 1/28/18 22:29\n",
@@ -2438,7 +2438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [],
    "source": [
