--- a/Ormat Assignment.ipynb
+++ b/Ormat Assignment.ipynb
@@ -620,8 +620,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# To determine difference bound (later explained below), the function \"bounded\" returns temperature values\n",
-    "# between 0.0 and 2.5 inclusive.\n",
+    "# To determine difference bound (later explained below), the function \"bounded\" returns \n",
+    "# temperature values between 0.0 and 2.5 inclusive.\n",
     "def bounded(x):\n",
     "    if x >= 0.0 and x <= 2.5:\n",
     "        return(x)\n",
